--- a/styles.css
+++ b/styles.css
@@ -415,7 +415,7 @@ html {
 .footer-logo-img {
     height: 50px;
     width: auto;
-    filter: brightness(0) invert(1);
+    filter: none;
 }
 
 .footer-links {
