--- a/styles.css
+++ b/styles.css
@@ -560,14 +560,33 @@ html {
     padding-top: 1rem;
 }
 
+.testimonial-header {
+    display: flex;
+    gap: 1.5rem;
+    align-items: flex-start;
+}
+
+.testimonial-image {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.testimonial-text {
+    flex: 1;
+}
+
 .author-name {
-    color: #666;
-    font-size: 0.9em;
-    font-weight: normal;
+    color: #333;
+    font-size: 1.1em;
+    font-weight: 600;
+    margin-bottom: 0.25rem;
 }
 
 .author-institution {
-    display: none;
+    color: #666;
+    font-size: 0.9em;
 }
 
 @media (max-width: 1024px) {
